--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "personal-website",
-  "version": "0.1.0",
+  "name": "shydevcorp",
+  "version": "0.6.9",
   "private": true,
   "scripts": {
     "dev:content": "velite --watch",
@@ -8,8 +8,9 @@
     "dev:next": "next dev",
     "build:next": "next build",
     "dev": "run-p dev:*",
-    "build": "npm install --legacy-peer-deps && run-s build:*",
+    "build": "run-s build:*",
     "start": "next start",
+    "lint": "eslint .",
     "upgrade:latest": "npm upgrade-interactive --latest",
     "format": "prettier --write \"**/*.{ts,tsx,md,mdx,json,css}\""
   },
@@ -18,7 +19,6 @@
     "@hookform/resolvers": "^4.1.0",
     "@next/third-parties": "^14.2.24",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@prisma/client": "^5.22.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -36,6 +36,8 @@
     "clsx": "^2.1.1",
     "emoji-flags": "^1.3.0",
     "framer-motion": "^11.18.2",
+    "geist": "^1.5.1",
+    "github-slugger": "^2.0.0",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.1.0",
     "i18next-resources-to-backend": "^1.2.1",
@@ -72,16 +74,19 @@
     "@types/react-dom": "^18.3.5",
     "@types/rss": "^0.0.32",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.3",
+    "eslint-config-prettier": "^10.1.8",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.5.2",
     "prettier": "^3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "prisma": "^5.22.0",
     "tailwindcss": "3.4.1",
     "typescript": "^5.7.3",
     "velite": "^0.1.1"
   },
   "resolutions": {
     "esbuild": "0.24.0"
-  }
+  },
+  "packageManager": "pnpm@10.22.0+sha512.bf049efe995b28f527fd2b41ae0474ce29186f7edcb3bf545087bd61fbbebb2bf75362d1307fda09c2d288e1e499787ac12d4fcb617a974718a6051f2eee741c"
 }
