--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.5.2",
     "react-icons": "^5.4.0",
+    "react-tweet": "^3.3.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-code-titles": "^1.2.0",
     "rehype-external-links": "^3.0.0",
