--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "i18next-browser-languagedetector": "^8.1.0",
     "i18next-resources-to-backend": "^1.2.1",
     "jiti": "^2.4.2",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.447.0",
     "next": "^16.1.1",
     "next-nprogress-bar": "^2.4.5",
