--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
     "format": "oxfmt --write ."
   },
   "dependencies": {
+    "@giscus/react": "^3.1.0",
+    "@hookform/resolvers": "^5.2.2",
     "@next/third-parties": "^16.1.1",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@radix-ui/react-visually-hidden": "^1.2.4",
     "@theme-toggles/react": "^4.1.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "axios": "^1.13.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
@@ -33,10 +39,14 @@
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-github-calendar": "^4.5.5",
+    "react-hook-form": "^7.71.1",
     "react-icons": "^5.4.0",
+    "rough-notation": "^0.5.1",
     "sharp": "0.33.5",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
